<resources>
    <string name="app_name">WaterOrdersApp</string>
    <string name="home_title">Water accounting</string>
    <string name="loading">Loading</string>
    <string name="data_load_error">Couldn\'t upload data</string>
    <string name="clients">Clients</string>
    <string name="purchases">Purchases</string>
    <string name="add_client">Add client</string>
    <string name="new_purchase">New purchase</string>
    <string name="paid">Paid</string>
    <string name="not_paid">Not paid</string>
    <string name="client_name_placeholder">Name client</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="date_placeholder">Date</string>
    <string name="liters_placeholder">Liters</string>
    <string name="days_enough_placeholder">Enough for about</string>
    <string name="date_format">Date: %1$s</string>
    <string name="liters_format">Liters: %1$.1f l</string>
    <string name="days_enough_format">Enough for about %1$d days</string>
    <string name="add_client_title">Adding a client</string>
    <string name="full_name_hint">Full name of the client</string>
    <string name="save_client">Save the client</string>
    <string name="empty_full_name_error">Enter the client\'s full name</string>
    <string name="add_purchase_title">New purchase</string>
    <string name="client_hint">Client</string>
    <string name="month_hint">Month</string>
    <string name="date_hint">Date</string>
    <string name="liters_hint">Volume of water, l</string>
    <string name="payment_status_title">Payment status</string>
    <string name="save_purchase">Save purchase</string>
    <string name="select_client_error">Select client</string>
    <string name="invalid_liters_error">Enter the correct amount of water</string>
    <string name="enter_date_error">Enter date</string>
    <string name="select_date">Select date</string>
</resources>